<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <!-- ImageView to show an image -->
    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/flowerrr"
        android:layout_marginTop="40dp" />

    <!-- TextView to show a message -->
    <TextView
        android:id="@+id/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_app"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <!-- Button to change image and text -->
    <Button
        android:id="@+id/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <!-- Additional Button to go to OrderActivity -->
    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_order_activity"
        android:layout_marginTop="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp" />

</LinearLayout>
